Enable optional day-month for the Project's completion date